lexer.c
/* Generated by re2c 4.3 on Fri May 22 22:48:55 2026 */
#line 1 "lexer.re"
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "lexer.h"
#include "parser.h"

#ifdef _WIN32
static char *js_strndup(const char *s, size_t n) {
    char *copy = (char *)malloc(n + 1);
    if (!copy) {
        return NULL;
    }
    memcpy(copy, s, n);
    copy[n] = '\0';
    return copy;
}
#else
#define js_strndup strndup
#endif

// 扫描器状态：re2c 通过 cursor/marker 推进输入；line/column 用于错误和 ASI 报告。
typedef struct {
    const char *start;
    const char *cursor;
    const char *marker;
    const char *ctxmarker;
    int line;
    int column;
    int last_token_line;
    int last_token_column;
    int last_token;
    int brace_stack[256];
    int brace_top;
    int last_closed_brace_was_object;
} Scanner;

static Scanner scanner;

// 初始化词法分析器状态。每次重新解析同一份输入时都要调用。
void init_scanner(const char *input) {
    scanner.start = input;
    scanner.cursor = input;
    scanner.marker = NULL;
    scanner.ctxmarker = NULL;
    scanner.line = 1;
    scanner.column = 1;
    scanner.last_token_line = 1;
    scanner.last_token_column = 1;
    scanner.last_token = 0;
    scanner.brace_top = 0;
    scanner.last_closed_brace_was_object = 0;
}

// 从输入开头重新计算当前位置。当前项目输入较小，这种写法简单可靠。
static void update_position() {
    const char *p = scanner.start;
    int line = 1;
    int column = 1;
    
    while (p < scanner.cursor) {
        if (*p == '\n') {
            line++;
            column = 1;
        } else {
            column++;
        }
        p++;
    }
    
    scanner.line = line;
    scanner.column = column;
    yylineno = line;
}

// 计算某个源码指针对应的 1-based 行号和列号。
static void pointer_position(const char *target, int *line, int *column) {
    const char *p = scanner.start;
    int current_line = 1;
    int current_column = 1;

    while (p < target) {
        if (*p == '\n') {
            current_line++;
            current_column = 1;
        } else {
            current_column++;
        }
        p++;
    }

    *line = current_line;
    *column = current_column;
}

// 打印 ASI 虚拟分号插入位置。AST 阶段复用 lexer 时会关闭该日志。
static void print_asi_insertion(const char *after_char) {
    int line;
    int column;

    if (!asi_report_enabled) {
        return;
    }
    pointer_position(after_char, &line, &column);
    printf("ASI: inserted virtual semicolon at line %d, column %d\n",
           line, column + 1);
}

// 返回当前行最后一个有效源码字符；行尾注释不参与 ASI 判断。
static const char *effective_line_end(const char *newline_start) {
    const char *line_start = newline_start;
    const char *p;

    while (line_start > scanner.start && line_start[-1] != '\n' && line_start[-1] != '\r') {
        line_start--;
    }

    for (p = line_start; p + 1 < newline_start; p++) {
        if (p[0] == '/' && p[1] == '/') {
            newline_start = p;
            break;
        }
    }

    p = newline_start;
    while (p > line_start) {
        --p;
        if (*p != ' ' && *p != '\t' && *p != '\v' && *p != '\f') {
            return p;
        }
    }

    return NULL;
}

// 返回 token 前维护少量上下文，用于区分对象字面量的 } 和普通代码块的 }。
static int token(int tok) {
    scanner.last_token_line = scanner.line;
    scanner.last_token_column = scanner.column;

    if (tok == LBRACE) {
        int is_object = 0;
        switch (scanner.last_token) {
            case ASSIGN:
            case PLUS_ASSIGN:
            case MINUS_ASSIGN:
            case MULTIPLY_ASSIGN:
            case DIVIDE_ASSIGN:
            case MODULO_ASSIGN:
            case EXPONENT_ASSIGN:
            case AND_ASSIGN:
            case OR_ASSIGN:
            case XOR_ASSIGN:
            case LEFT_SHIFT_ASSIGN:
            case RIGHT_SHIFT_ASSIGN:
            case UNSIGNED_RIGHT_SHIFT_ASSIGN:
            case LPAREN:
            case LBRACKET:
            case COMMA:
            case COLON:
            case QUESTION:
            case RETURN:
            case THROW:
            case ARROW:
                is_object = 1;
                break;
        }

        if (scanner.brace_top < (int)(sizeof(scanner.brace_stack) / sizeof(scanner.brace_stack[0]))) {
            scanner.brace_stack[scanner.brace_top++] = is_object;
        }
        scanner.last_closed_brace_was_object = 0;
    } else if (tok == RBRACE) {
        scanner.last_closed_brace_was_object = 0;
        if (scanner.brace_top > 0) {
            scanner.last_closed_brace_was_object = scanner.brace_stack[--scanner.brace_top];
        }
    } else if (tok != SEMICOLON) {
        scanner.last_closed_brace_was_object = 0;
    }

    scanner.last_token = tok;
    return tok;
}

#line 202 "lexer.re"


int yylex(void) {
    const char *start;
    
scan:
    start = scanner.cursor;
    update_position();
    

#line 199 "lexer.c"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	yych = *scanner.cursor;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t':
		case '\v':
		case '\f':
		case ' ': goto yy4;
		case '\n': goto yy6;
		case '\r': goto yy8;
		case '!': goto yy9;
		case '"': goto yy11;
		case '%': goto yy12;
		case '&': goto yy14;
		case '\'': goto yy16;
		case '(': goto yy17;
		case ')': goto yy18;
		case '*': goto yy19;
		case '+': goto yy21;
		case ',': goto yy23;
		case '-': goto yy24;
		case '.': goto yy26;
		case '/': goto yy28;
		case '0': goto yy30;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy32;
		case ':': goto yy34;
		case ';': goto yy35;
		case '<': goto yy36;
		case '=': goto yy38;
		case '>': goto yy40;
		case '?': goto yy42;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'm':
		case 'o':
		case 'p':
		case 'q':
		case 'u':
		case 'x':
		case 'z': goto yy44;
		case '[': goto yy47;
		case ']': goto yy48;
		case '^': goto yy49;
		case 'a': goto yy51;
		case 'b': goto yy52;
		case 'c': goto yy53;
		case 'd': goto yy54;
		case 'e': goto yy55;
		case 'f': goto yy56;
		case 'i': goto yy57;
		case 'l': goto yy58;
		case 'n': goto yy59;
		case 'r': goto yy60;
		case 's': goto yy61;
		case 't': goto yy62;
		case 'v': goto yy63;
		case 'w': goto yy64;
		case 'y': goto yy65;
		case '{': goto yy66;
		case '|': goto yy67;
		case '}': goto yy69;
		case '~': goto yy70;
		default: goto yy2;
	}
yy1:
	++scanner.cursor;
#line 389 "lexer.re"
	{ return 0; }
#line 307 "lexer.c"
yy2:
	++scanner.cursor;
yy3:
#line 392 "lexer.re"
	{ return token(ERROR_TOKEN); }
#line 313 "lexer.c"
yy4:
	yych = *++scanner.cursor;
	switch (yych) {
		case '\t':
		case '\v':
		case '\f':
		case ' ': goto yy4;
		default: goto yy5;
	}
yy5:
#line 213 "lexer.re"
	{ goto scan; }
#line 326 "lexer.c"
yy6:
	++scanner.cursor;
yy7:
#line 229 "lexer.re"
	{
        const char *p = effective_line_end(start);
        if (p == NULL) {
            goto scan;
        }
        if (strchr("{[(,.:;?*/%<>=!&|^~", *p) != NULL) {
            goto scan;
        }
        if ((*p == '+' || *p == '-') && (p == scanner.start || p[-1] != *p)) {
            goto scan;
        }
        if (*p == '}' && !scanner.last_closed_brace_was_object) {
            goto scan;
        }
        const char *q = scanner.cursor;
        while (*q == ' ' || *q == '\t' || *q == '\v' || *q == '\f') {
            ++q;
        }
        if (*q == ']' || *q == ')') {
            goto scan;
        }
        if (*q == '}' && scanner.brace_top > 0 && scanner.brace_stack[scanner.brace_top - 1]) {
            goto scan;
        }
        print_asi_insertion(p);
        return token(SEMICOLON);
    }
#line 358 "lexer.c"
yy8:
	yych = *++scanner.cursor;
	switch (yych) {
		case '\n': goto yy6;
		default: goto yy7;
	}
yy9:
	yych = *++scanner.cursor;
	switch (yych) {
		case '=': goto yy71;
		default: goto yy10;
	}
yy10:
#line 383 "lexer.re"
	{ return token(NOT); }
#line 374 "lexer.c"
yy11:
	yyaccept = 0;
	yych = *(scanner.marker = ++scanner.cursor);
	switch (yych) {
		case 0x01:
		case 0x02:
		case 0x03:
		case 0x04:
		case 0x05:
		case 0x06:
		case 0x07:
		case 0x08:
		case '\t':
		case '\v':
		case '\f':
		case 0x0E:
		case 0x0F:
		case 0x10:
		case 0x11:
		case 0x12:
		case 0x13:
		case 0x14:
		case 0x15:
		case 0x16:
		case 0x17:
		case 0x18:
		case 0x19:
		case 0x1A:
		case 0x1B:
		case 0x1C:
		case 0x1D:
		case 0x1E:
		case 0x1F:
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF:
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF:
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4: goto yy74;
		default: goto yy3;
	}
yy12:
	yych = *++scanner.cursor;
	switch (yych) {
		case '=': goto yy84;
		default: goto yy13;
	}
yy13:
#line 379 "lexer.re"
	{ return token(MODULO); }
#line 566 "lexer.c"
yy14:
	yych = *++scanner.cursor;
	switch (yych) {
		case '&': goto yy85;
		case '=': goto yy86;
		default: goto yy15;
	}
yy15:
#line 384 "lexer.re"
	{ return token(BITWISE_AND); }
#line 577 "lexer.c"
yy16:
	yyaccept = 0;
	yych = *(scanner.marker = ++scanner.cursor);
	switch (yych) {
		case 0x01:
		case 0x02:
		case 0x03:
		case 0x04:
		case 0x05:
		case 0x06:
		case 0x07:
		case 0x08:
		case '\t':
		case '\v':
		case '\f':
		case 0x0E:
		case 0x0F:
		case 0x10:
		case 0x11:
		case 0x12:
		case 0x13:
		case 0x14:
		case 0x15:
		case 0x16:
		case 0x17:
		case 0x18:
		case 0x19:
		case 0x1A:
		case 0x1B:
		case 0x1C:
		case 0x1D:
		case 0x1E:
		case 0x1F:
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF:
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF:
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4: goto yy88;
		default: goto yy3;
	}
yy17:
	++scanner.cursor;
#line 371 "lexer.re"
	{ return token(LPAREN); }
#line 764 "lexer.c"
yy18:
	++scanner.cursor;
#line 372 "lexer.re"
	{ return token(RPAREN); }
#line 769 "lexer.c"
yy19:
	yych = *++scanner.cursor;
	switch (yych) {
		case '*': goto yy97;
		case '=': goto yy99;
		default: goto yy20;
	}
yy20:
#line 377 "lexer.re"
	{ return token(MULTIPLY); }
#line 780 "lexer.c"
yy21:
	yych = *++scanner.cursor;
	switch (yych) {
		case '+': goto yy100;
		case '=': goto yy101;
		default: goto yy22;
	}
yy22:
#line 375 "lexer.re"
	{ return token(PLUS); }
#line 791 "lexer.c"
yy23:
	++scanner.cursor;
#line 364 "lexer.re"
	{ return token(COMMA); }
#line 796 "lexer.c"
yy24:
	yych = *++scanner.cursor;
	switch (yych) {
		case '-': goto yy102;
		case '=': goto yy103;
		default: goto yy25;
	}
yy25:
#line 376 "lexer.re"
	{ return token(MINUS); }
#line 807 "lexer.c"
yy26:
	yyaccept = 1;
	yych = *(scanner.marker = ++scanner.cursor);
	switch (yych) {
		case '.': goto yy104;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy105;
		default: goto yy27;
	}
yy27:
#line 366 "lexer.re"
	{ return token(DOT); }
#line 828 "lexer.c"
yy28:
	yych = *++scanner.cursor;
	switch (yych) {
		case '*': goto yy107;
		case '/': goto yy108;
		case '=': goto yy110;
		default: goto yy29;
	}
yy29:
#line 378 "lexer.re"
	{ return token(DIVIDE); }
#line 840 "lexer.c"
yy30:
	yyaccept = 2;
	yych = *(scanner.marker = ++scanner.cursor);
	switch (yych) {
		case 'x': goto yy112;
		default: goto yy33;
	}
yy31:
#line 263 "lexer.re"
	{
        yylval.number = strtod(start, NULL);
        return token(NUMBER);
    }
#line 854 "lexer.c"
yy32:
	yyaccept = 2;
	yych = *(scanner.marker = ++scanner.cursor);
yy33:
	switch (yych) {
		case '.': goto yy105;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy32;
		case 'E':
		case 'e': goto yy111;
		default: goto yy31;
	}
yy34:
	++scanner.cursor;
#line 365 "lexer.re"
	{ return token(COLON); }
#line 879 "lexer.c"
yy35:
	++scanner.cursor;
#line 363 "lexer.re"
	{ return token(SEMICOLON); }
#line 884 "lexer.c"
yy36:
	yych = *++scanner.cursor;
	switch (yych) {
		case '<': goto yy113;
		case '=': goto yy115;
		default: goto yy37;
	}
yy37:
#line 380 "lexer.re"
	{ return token(LESS); }
#line 895 "lexer.c"
yy38:
	yych = *++scanner.cursor;
	switch (yych) {
		case '=': goto yy116;
		case '>': goto yy118;
		default: goto yy39;
	}
yy39:
#line 382 "lexer.re"
	{ return token(ASSIGN); }
#line 906 "lexer.c"
yy40:
	yych = *++scanner.cursor;
	switch (yych) {
		case '=': goto yy119;
		case '>': goto yy120;
		default: goto yy41;
	}
yy41:
#line 381 "lexer.re"
	{ return token(GREATER); }
#line 917 "lexer.c"
yy42:
	yych = *++scanner.cursor;
	switch (yych) {
		case '.': goto yy122;
		case '?': goto yy123;
		default: goto yy43;
	}
yy43:
#line 373 "lexer.re"
	{ return token(QUESTION); }
#line 928 "lexer.c"
yy44:
	yych = *++scanner.cursor;
yy45:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
